# MPU-Class-Time-Generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  test.py
ManageData/: Reader.py  Saver.py  Writer.py
ManipulateData/: Reader.py  Writer.py
ParseData/: Converter.py  Filter.py  Selector.py  Splitter.py
RequestData/: Requester.py  User.py
Tool/: DataType.py  Decorator.py
parseData/: Selector.py
temp/: day_timetable.csv  timetable.csv  timetable.html
tests/: test_Converter.py  test_Filter.py  test_Reader.py  test_Selector.py  test_Splitter.py  test_User.py  test_Writer.py
tool/: decorator.py
